schema filepath fix

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -36,6 +36,6 @@ jobs:
       # only run this command with the `--background` flag if you have the Apollo Studio GitHub integration enabled on your repository
       - name: Run check against prod
         run: |
-          rover subgraph check uaplaybook2@current --schema ./subgraph-members/members.graphql --name members
-          rover subgraph check uaplaybook2@current --schema ./subgraph-locations/locations.graphql --name locations
-          rover subgraph check uaplaybook2@current --schema ./subgraph-foods/foods.graphql --name foods
+          rover subgraph check uaplaybook2@current --schema ./server/subgraph-members/members.graphql --name members
+          rover subgraph check uaplaybook2@current --schema ./server/subgraph-locations/locations.graphql --name locations
+          rover subgraph check uaplaybook2@current --schema ./server/subgraph-foods/foods.graphql --name foods
